<resources>
    <!-- main activity -->
    <string name="app_name">HomeBudget</string>
    <string name="action_settings">Settings</string>
    <string name="action_version">Version</string>
    <string name="action_sync">Synchronization</string>

    <!-- tapped menu -->
    <string name="title_section1">Outcome</string>
    <string name="title_section2">Summary</string>
    <string name="title_section3">Income</string>

    <!-- Version activity -->
    <string name="title_activity_version">VersionActivity</string>
    <string name="token_settings">Token:</string>
    <string name="token_value_settings">Token value</string>
    <string name="version_settings">Version</string>
    <string name="version_value_settings">2.2</string>

    <!-- Settings activity -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_auto_savings">Auto-savings in first day every month</string>
    <string name="settings_auto_delete">Auto-delete element in first day every month</string>
    <string name="settings_auto_local_save">Always save in local database</string>

    <!-- Summary activity -->
    <string name="summary_income">Income</string>
    <string name="summary_outcome">Outcome </string>
    <string name="summary_summary">Summary</string>
    <string name="summary_savings">Savings</string>
    <string name="generate_graph">Generate graph</string>

    <!-- welcome activity -->
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="welcome">Welcome to Home Budget</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="connection_error">No active internet connection</string>

    <!-- element activity -->
    <string name="title_activity_element">ElementActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="element">Element</string>
    <string name="name">Name</string>
    <string name="type_name">Type name</string>
    <string name="value">Value</string>
    <string name="type_value">Type value</string>
    <string name="date">Date</string>
    <string name="constant_element">Constant element</string>
    <string name="ask_date">Add date</string>

    <!-- sync activity -->
    <string name="title_activity_sync">SyncActivity</string>
    <string name="to_file">Database to file</string>
    <string name="to_database">File to database</string>
    <string name="clear_database">Clear database</string>
    <string name="clear_file">Clear file</string>

    <!-- sync activity -->
    <string name="category_name">Type name of category:</string>
    <string name="token_name">Token:</string>

    <!-- list adapter -->
    <string name="add_category">Add category</string>
    <string name="add_element">Add element</string>
    <string name="show_summary_category">Show summary</string>

    <!-- dialog -->
    <string name="ask">What to do?</string>
    <string name="delete">Delete</string>
    <string name="check_graph">Work ony with internet access</string>

    <!-- graph activity -->
    <string name="title_activity_graph">GraphActivity</string>

    <!-- show summary activity -->
    <string name="title_activity_show_summary">ShowSummaryActivity</string>
    <string name="category">Category</string>
    <string name="max_element">Max element</string>
    <string name="min_element">Min element</string>
    <string name="part_all">Part of all</string>
    <string name="sum_all_elements">Sum of all elements</string>

    <!-- toast -->
    <string name="toast_category">Invalid name</string>
    <string name="toast_no_element">No element in category</string>

</resources>
