<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.slusarzparadowski.homebudget.SyncActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_database"
        android:id="@+id/buttonFileToDatabase"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_file"
        android:id="@+id/buttonDatabaseToFile"
        android:layout_below="@+id/buttonFileToDatabase"
        android:layout_alignRight="@+id/buttonFileToDatabase"
        android:layout_alignEnd="@+id/buttonFileToDatabase"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_database"
        android:id="@+id/buttonClearDatabase"
        android:layout_below="@+id/buttonDatabaseToFile"
        android:layout_alignRight="@+id/buttonDatabaseToFile"
        android:layout_alignEnd="@+id/buttonDatabaseToFile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_file"
        android:id="@+id/buttonClearFile"
        android:layout_below="@+id/buttonClearDatabase"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
