<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.slusarzparadowski.homebudget.WelcomeActivity"
    android:focusable="false">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView2"
        android:gravity="center_horizontal"
        android:layout_marginTop="157dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:id="@+id/buttonOnline"
        android:layout_below="@+id/buttonOffline"
        android:layout_alignLeft="@+id/buttonOffline"
        android:layout_alignStart="@+id/buttonOffline" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:id="@+id/buttonOffline"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerUsers"
        android:layout_below="@+id/buttonOnline"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUserName"
        android:layout_below="@+id/spinnerUsers"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</RelativeLayout>
