<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.slusarzparadowski.homebudget.ShowSummaryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/category"
        android:id="@+id/textViewCategory"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/max_element"
        android:id="@+id/textViewMaxElement"
        android:layout_below="@+id/textViewCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewMaxElementValue"
        android:layout_below="@+id/textViewMaxElement"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewMaxElement"
        android:layout_alignEnd="@+id/textViewMaxElement"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/min_element"
        android:id="@+id/textViewMinElement"
        android:layout_below="@+id/textViewMaxElementValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewMaxElementValue"
        android:layout_alignEnd="@+id/textViewMaxElementValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewMinElementValue"
        android:layout_below="@+id/textViewMinElement"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="right"
        android:layout_alignRight="@+id/textViewMaxElementValue"
        android:layout_alignEnd="@+id/textViewMaxElementValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/part_all"
        android:id="@+id/textViewPartAll"
        android:layout_below="@+id/textViewMinElementValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewMinElementValue"
        android:layout_alignEnd="@+id/textViewMinElementValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewPartAllValue"
        android:layout_below="@+id/textViewPartAll"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sum_all_elements"
        android:id="@+id/textViewSumAllElements"
        android:layout_below="@+id/textViewPartAllValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewPartAllValue"
        android:layout_alignEnd="@+id/textViewPartAllValue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/textViewSumAllElementsValue"
        android:layout_below="@+id/textViewSumAllElements"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewSumAllElements"
        android:layout_alignEnd="@+id/textViewSumAllElements"
        android:gravity="right" />
</RelativeLayout>
